Fixed images in article body not resizing on smaller screens

--- a/public/css/_article.scss
+++ b/public/css/_article.scss
@@ -16,8 +16,12 @@ div.container-article {
 			}
 		}
 
-		p.article-body {
+		div.article-body {
 			text-align: justify;
+
+			img {
+				max-width: 100%;
+			}
 		}
 	}
 
